bat / sh scripts rewritten