@@ -1,25 +1,15 @@
 #!/bin/bash
+
+# Unix script file
 #
-# GUI AppLauncher
+# Run AppLauncher
 #
 
 
 # set main class:
-CLASS=fr.jmmc.smprun.AppLauncher
+export CLASS=fr.jmmc.smprun.AppLauncher
 
-DIR="."
+bash run_jmmc.sh
 
-# --- template-start ---
-# jdk17+: add "--illegal-access=permit"
-JAVA_OPTS="-Xms512m -Xmx4g $JAVA_OPTS"
-
-echo "Java version:"
-java -version
-
-echo "JAVA_OPTS:   '$JAVA_OPTS'"
-echo "JAVA_TUNING: '$JAVA_TUNING'"
-
-java $JAVA_TUNING $JAVA_OPTS -cp "$DIR/jmmc-tools-TRUNK-jar-with-dependencies.jar" $CLASS "$@"
-
-# --- template-end ---
+# --- EoF ---
 
